# PORT_NOIE

./: README.md  pyproject.toml
OIE/: data_analisys.ipynb  eval.py  eval2.py  fine_tune.py  fine_tune_transformer.py  predict.py  texto.txt  texto_familia.txt  train.py  txt_facts_ext.py
OIE/datasets/: conll2bioes.py  create_txt_csv.py  feedback_dataset.py  main.py  match.py  merge_datasets.py  pos_tag.py  prepare_conll_datasets.py  prepare_silver_gold.py  run_trans.py  train_test_dev.py  trans_other.py  translate.py  translate_other.py
OIE/datasets/other_corpus/: prepare_silver_gold.py  std.py
OIE/datasets/other_corpus/s2/: valid.tsv
OIE/datasets/saida_pos_tag/: PTOIE_dev.txt  PTOIE_test.txt
OIE/datasets/splits_sets/fine_tuning/: fine_tune_corpus.txt  fine_tune_test.txt  fine_tune_train.txt
OIE/datasets/splits_sets/ls_no_dev/: LSOIE_test.txt  LSOIE_train.txt
OIE/datasets/splits_sets/ptoie/: PTOIE_train.txt
OIE/datasets/splits_sets/ptoie_no_dev/: PTOIE_test.txt  PTOIE_train.txt
OIE/datasets/src/: conll2bioes.py  create_txt_csv.py  match.py  merge_datasets.py  pos_tag.py  train_test_dev.py
OIE/datasets/translated/: development.ipynb  main.py  translate.py
OIE/datasets/translated/carb/: dev.tsv  test.tsv
OIE/datasets/translated/development/: fine_tune.txt  (+2 more)
OIE/datasets/validated_splits/: generative_dataset.py
OIE/evaluations/: PTOIE_pos_dev.txt  PTOIE_pos_result.json
OIE/evaluations/benckmark/: curve_portnoie2.txt  portnoie2_results.pkl
OIE/evaluations/src/: benchmark.py  matcher.py
OIE/final/: matcher.py
OIE/testes/: teste_BERT.ipynb
OIE/trainers/: trainer.py
(+164 files in other folders)
