[tool.poetry]
name = "Flair-oie"
version = "0.1.0"
description = "A neural OpenIE system based on Flair"
license = "Comercial - Private"
authors = [
    "Alan Rios <alanrios2001@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp39-cp39-win_amd64.whl" }
typer = "*"
torch-optimizer = "*"
madgrad = "*"
torchtext = "*"
jupyter = "*"
protobuf = "^3.20"
sacremoses = "^0.0.53"
deep-translator = "*"
diskcache = "*"
pandas = "*"
nltk = "*"
spacy = "^3.5.2"
flair = {git = "https://github.com/flairNLP/flair"}
openai = "^0.27.7"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
