[tool.poetry]
name = "Flair-oie"
version = "0.1.0"
description = "A neural OpenIE system based on Flair"
license = "Comercial - Private"
authors = [
    "Alan Rios <alanrios2001@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp39-cp39-win_amd64.whl" }
protobuf = "^3.20"
sacremoses = "^0.0.53"
#pandas = "*"
#nltk = "*"
typer = "^0.9.0"
madgrad = "^1.3"
jupyter = "^1.0.0"
diskcache = "^5.6.1"
spacy = "^3.6.1"
openai = "^0.27.8"
flair = {git = "https://github.com/flairNLP/flair.git"}
httpx = "^0.24.1"
deep-translator = "^1.11.4"
nltk = "^3.8.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
